--- a/Report.Rmd
+++ b/Report.Rmd
@@ -16,19 +16,19 @@ output:
 
 ## Abstract
 
-In this report, I will be looking at the various factors that influence a film's reception among audiences. Using the 'ggplot2movies' packages, I will be looking at the dataset 'movies' and filtering the dataset to include relevant variables such as — title, rating, length, year, and budget. I will then run an analysis to identify whether the variables 'budget', 'length', or 'year' affect a film's reception. After completing the analysis, I concluded that a film's length and budget have a positive relationship with the film's rating, while year has a negative relationship. 
+In this report, I will be looking at the various factors that influence a film's reception among audiences. Using the 'ggplot2movies' packages, I will be looking at the dataset 'movies' and identifying whether the variables 'budget', 'length', or 'year' affect a film's reception. After completing the analysis, I concluded that a film's length and budget have a positive relationship with the film's rating, while year of release has a negative relationship. This information assists the general audience in determining how film ratings are affected by various variables and also assists film companies in determining anticipation for their films. 
 
 ## Introduction 
 
-Many variables can influence an audience's reception to a film. These variables include— the budget of the film, the length of the film, and the year the film was released. This poses the interesting question — how does a film's budget, length and year of release affect it's reception among audiences?
+Many variables can influence an audience's reception to a film. These variables include— the budget of the film, the length of the film, and the year the film was released. This poses the interesting question — how does a film's budget, length and year of release affect its reception among audiences?
 
 In the report, I will investigate this question by taking a deep look at the interplay between all the factors. I began the analysis by cleaning the 'ggplot2movies' data so that it only includes variables of interest such as — title, length, rating, budget, and year of release. Since some of these entries in our dataset do not contain information for relevant variables, I deleted those entries so that all films in the dataset are analyzed from the same standpoint. 
 
-I began the analysis by looking at the variables budget and length. I conducted linear regression for both variables and discovered that there is a significant positive relationship due to the significantly small p-value. Lastly, I looked at the variable year and discovered  that there is a significant negative relationship due to the significantly small p-value. With these results, I concluded that a film's budget and length positively affect a film's reception, while a film's year of release negatively affect a film's reception.
+I began the analysis by looking at the variables budget and length. I conducted linear regression for both variables and discovered that there is a significant positive relationship due to the significantly small p-value. Lastly, I looked at the variable year and discovered that there is a significant negative relationship due to the significantly small p-value. With these results, I concluded that a film's budget and length positively affect a film's reception, while a film's year of release negatively affect a film's reception.
 
 The results from this analysis are important because they provide an outlook on important variables that affect a film's reception. This information can be useful to both audiences that watch films as well as to film production companies so they can forecast what the reception for their films will be like. 
 
-In this report, I will begin by explaining the data that I will be using in the 'Data' section, followed by the model I will use to make conclusions in the 'Model' section. I will then show the results from my analysis in the 'Results' section and explain them in the 'Discussion' sections. Lastly, I will reserve a section for any extranneous information, code, and references in the 'Appendix/References' section.
+In this report, I will begin by explaining the data that I will be using in the 'Data' section, followed by the model I will use to make conclusions in the 'Model' section. I will then show the results from my analysis in the 'Results' section and explain them in the 'Discussion' sections. Lastly, I will reserve a section for any extraneous information, code, and references in the 'Appendix/References' section.
 
 
 ## Data
@@ -112,17 +112,17 @@ There are also potential biases that arise from the dataset. Due to the fact tha
 
 In this paper, I will be using linear regression to determine how budget, length and year of release can affect a film's reception. 
 
-A linear regression model can be explained by the equation $$y=a*x_0 +b$$ In this case, $y$ is the film's dependant variable, while $x_0$ is the independant variable; $a$ is interpreted as the slope coefficient, while $b$ is the y-intercept .   
+The linear regression model can be explained by the equation $$y=a*x_0 +b$$ In this case, $y$ is the film's dependant variable, while $x_0$ is the independent variable; $a$ is interpreted as the slope coefficient, while $b$ is the y-intercept.   
 
-I want to determine whether the independant variable affects the dependant variable. The purpose of linear regression is to approximate the relationship between the dependant and independant variable with a straight line. The straight line is fitted to reduce error between all of the points on the scatterplot between the dependant variable ('rating') and the independant variable (differs) . After approximating the relationship with a straight line, we can use the slope co-efficient to determine whether there is a positive or negative relationship. A positive slope coefficent implies a positive relationship, while a negative slope coefficent implies a negative relationship. But in order to determine whether the relationship is actually statistically significant, we need to look at the p-value. 
+I want to determine whether the independent variable affects the dependant variable. The purpose of linear regression is to approximate the relationship between the dependant and independent variable with a straight line. The straight line is fitted to reduce error between all of the points on the scatterplot between the dependant variable ('rating') and the independent variable (differs) . After approximating the relationship with a straight line, we can use the slope coefficient to determine whether there is a positive or negative relationship. A positive slope coefficent implies a positive relationship, while a negative slope coefficient implies a negative relationship. But in order to determine whether the relationship is actually statistically significant, we need to look at the p-value. 
 
-The purpose of a p-value is to determine whether the relationship is actually significant or if it just occured by chance. The p-value assumes that the null hypothesis — there is no relation between the independant and dependant variable — is true, and finds the probability of obtaining results that are more extreme than the null hypothesis in the dataset. If the p-value is large, then that indicates that the data supports the null hypothesis; if the p-value is small, then that indicates that the data does not support the null hypothesis. I will be using a significance level of 0.05 meaning that if the p-value is smaller than 0.05, I can conclude that there is a significant relationship. 
+The purpose of a p-value is to determine whether the relationship is actually significant or if it just ocurred by chance. The p-value assumes that the null hypothesis — there is no relation between the independent and dependant variable — is true, and finds the probability of obtaining results that are more extreme than the null hypothesis in the dataset. If the p-value is large, then that indicates that the data supports the null hypothesis; if the p-value is small, then that indicates that the data does not support the null hypothesis. I will be using a significance level of 0.05 meaning that if the p-value is smaller than 0.05, I can conclude that there is a significant relationship. 
 
-Using the lm() function in R, I will create a linear regression model, and then I will look at the summary of the model to determine if my results are meaningful. The summary of the linear regression model provides both the slope coefficient which allows me to determine whether we have a positive or negative relationship, and it also provides the p-value for the slope coefficient so I can identify whether there is a significant relationship. If the p-value is less than 0.05, then I know that the independant variable affects has a significant relationship with the film's reception. 
+Using the lm() function in R, I will create a linear regression model, and then I will look at the summary of the model to determine if my results are meaningful. The summary of the linear regression model provides both the slope coefficient which allows me to determine whether we have a positive or negative relationship, and it also provides the p-value for the slope coefficient so I can identify whether there is a significant relationship. If the p-value is less than 0.05, then I know that the independent variable affects has a significant relationship with the film's reception. 
 
-The dependant variable in this linear regression model will be 'rating' because I want to determine how the rating of a film is dependant on other independant variable such as budget, length, and year of release. Since I am analyzing a 'film's reception' in this paper, the variable that best encompasses reception is the average rating that IMDB users provide for the film, which is why I am using 'rating' as the dependant variable. 
+The dependant variable in this linear regression model will be 'rating' because I want to determine how the rating of a film is dependant on other independent variable such as budget, length, and year of release. Since I am analyzing a 'film's reception' in this paper, the variable that best encompasses reception is the average rating that IMDB users provide for the film, which is why I am using 'rating' as the dependant variable. 
 
-The independant variables I will be analyzing are: 
+The independent variables I will be analyzing are: 
 
 - 'length'- this provides the length of the film in minutes and is simply provided by the variable 'length'
 
@@ -130,19 +130,19 @@ The independant variables I will be analyzing are:
 
 - 'budget'- this is simply provided by the variable 'budget' and indicates the budget of the film in US dollars 
 
-All 3 variables that I am analyzing are continuous, numberical variables. 
+All 3 variables that I am analyzing are continuous, numerical variables. 
 
-Because I am identifying how a film's reception is affected by various independant variables, it makes sense to run linear regression as I want to see the cause and effect relationship between an independant and dependant variable. The relationships that I am analyzing are strictly between 2 variables — rating (dependant) and length, year or budget (independant). 
+Because I am identifying how a film's reception is affected by various independent variables, it makes sense to run linear regression as I want to see the cause and effect relationship between an independent and dependant variable. The relationships that I am analyzing are strictly between 2 variables — rating (dependant) and length, year or budget (independent). 
 
 ## Results 
 
-In this section of this paper, I will be looking at the relation between a film's rating and 3 different independant variables— length, year and budget. I will be using a signicance level of 0.05 to determine whether a p-value is significant. 
+In this section of this paper, I will be looking at the relation between a film's rating and 3 different independent variables— length, year and budget. I will be using a significance level of 0.05 to determine whether a p-value is significant. 
 
 ### How budget affects a film's reception 
 
 I will first look at how a film's budget affects the reception of a film
 
-In order to determine the relationship between the dependant variable (reception) and the independant variable (budget), I will run a linear regression. Because many of the entries in our dataset don't contain information about the film's budget, I will remove those values when performing the linear regression; this means that the linear regression between budget and reception will only inspect entries with a budget greater than 0. 
+In order to determine the relationship between the dependant variable (reception) and the independent variable (budget), I will run a linear regression. Because many of the entries in our dataset don't contain information about the film's budget, I will remove those values when performing the linear regression; this means that the linear regression between budget and reception will only inspect entries with a budget greater than 0. I will display the scatterplat between film rating and budget in Figure 4 below:
 
 ### Figure 4
 ```{r echo= FALSE}
@@ -152,9 +152,9 @@ budgetfiltered <- filter(moviesfilteredx, budget > 0)
 plot(rating~budget,data=budgetfiltered  , main = "Film Budget vs. Rating", xlab = "Budget of Film", ylab = "Rating of Film") 
 ```
 
-Looking at the data as a scatterplot, there seems to be slight positive relationship between the 2 variables.  
+Looking at the data as a scatterplot in Figure 4, there seems to be slight positive relationship between the 2 variables.  
 
-To further examine the relationship, I will run a linear regression between the two variables to determine whether the relationship is significant. The results of the linear regression can be seen below: 
+To further examine the relationship, I will run a linear regression between the two variables to determine whether the relationship is significant. A visualization of the linear regression can be seen in Figure 5, and the summary statistics for the linear regression can be seen in Table 2 below: 
 
 ### Figure 5 
 ```{r echo = FALSE}
@@ -171,13 +171,14 @@ abline(linregbudget, col="red")
 #Summary statistics for linear regression 
 summary(linregbudget)
 ```
-Judging by the linear regression summary, we can conclude that there is a meaningful relationship between the dependant variable, rating, and the independant variable, budget. This is due to the fact that the p-value (2e-16) is significantly smaller than the significance level of 0.05 we are using in this report. 
+
+Judging by the linear regression summary, we can conclude that there is a meaningful relationship between the dependant variable, rating, and the independant variable, budget. This is due to the fact that the p-value (<2e-16) is significantly smaller than the significance level of 0.05. This indicates that the relationship we discovered is truly significant and not just a case of chance. 
 
 ### How length affects a films reception 
 
 Next, I will be looking at how a film's length affects the reception of a film. 
 
-In order to determine the relationship between the dependant variable (reception) and the independant variable (length), I will run a linear regression, but first I will visualize the data with a scatterplot. 
+In order to determine the relationship between the dependant variable (reception) and the independent variable (length), I will run a linear regression, but first I will visualize the data with a scatterplot. In Figure 6 below, you will see a scatterplot between the variables rating and length:
 
 ### Figure 6
 ```{r echo = FALSE}
@@ -185,7 +186,7 @@ In order to determine the relationship between the dependant variable (reception
 plot(rating~length,data=movieswithoutcureforinsomnia, main = "Film Length vs. Rating", xlab = "Length of Film (in minutes)", ylab = "Rating of Film") 
 ```
 
-Although there is a large cluster on the left side of the graph, there does seem to be a slight positive relationship that indicates  a longer length results in a better film rating. To confirm this, we can look at the summary statistics for the linear regression. 
+Although there is a large cluster on the left side of the graph, there does seem to be a slight positive relationship that indicates  a longer length results in a better film rating. To confirm this, we can look at the summary statistics for the linear regression. A visualization of the linear regression can be seen in Figure 7, and the summary statistics for the linear regression can be seen in Table 3 below: 
 
 ### Figure 7 
 ```{r echo = FALSE}
@@ -203,13 +204,13 @@ abline(linreglength, col="red")
 summary(linreglength)
 ```
 
-After observing the summary statistics related to the relationship between rating and length, it is clear that we have a really strong relationship. The p-value of 2e-16 is significantly smaller than our significance level of 0.05 indicating that there is a strong relationship between the variables rating and length. 
+After observing the summary statistics related to the relationship between rating and length, it is clear that we have a really strong relationship. The p-value of 2e-16 is significantly smaller than our significance level of 0.05 indicating that there is a strong relationship between the variables rating and length, and the relationship is not due to chance.
 
 ### How the year of release affects a films reception 
 
 Last, we will look at how the year a film's released affects it's reception.  
 
-To begin, we will visualize the data with a scatterplot to identify whether we can see a relationship. 
+To begin, we will visualize the data with a scatterplot to identify whether we can see a relationship. In Figure 8 below, you will see a scatterplot between the variables rating and year: 
 
 ### Figure 8
 ```{r echo = FALSE}
@@ -219,7 +220,7 @@ plot(rating~year,data=moviesfilteredx, main = "Year of Release vs. Rating", xlab
 
 Judging by the scatterplot, there doesn't seem to be an obvious relationship between the two variables. 
 
-We can accurately identify whether there is a relationship by examining the linear regression between the two variables. 
+We can accurately identify whether there is a relationship by examining the linear regression between the two variables. A visualization of the linear regression can be seen in Figure 9, and the summary statistics for the linear regression can be seen in Table 4 below: 
 
 ### Figure 9
 ```{r echo = FALSE}
@@ -237,42 +238,43 @@ abline(linregyear, col="red")
 summary(linregyear)
 ```
 
-Surprisingly, there is a strong negative relationship. By observing the graph, I thought that there wasn't a significant relationship as I didn't see any blatant positive or negative relationship. But the slightly negative slope with a p-value much smaller than 0.05 indicates that there is a negative relationship between year and reception.  
+Surprisingly, there is a strong negative relationship. By observing the graph, I thought that there wasn't a significant relationship as I didn't see any obvious positive or negative relationship. The slightly negative slope with a p-value much smaller than 0.05 indicates that there is a negative relationship between year and reception, and it is not due to chance. 
 
 ## Discussion 
 
-From this results of the analysis, I can conclude that there is a positive relationship between reception and budget, a positive relationshop between reception and length, and a negative relationship between reception and year of release. 
+From the result of the analysis, I can conclude that there is a positive relationship between reception and budget, a positive relationship between reception and length, and a negative relationship between reception and year of release. 
 
-The positive relationship between a film's reception and budget indicates that as a film's budget increases,  the reception of the film increases as well. Many of the film's released before 1950 had positive reception, despite the low budget; this can be a result of the fact that many IMDB reviewers rated these films based on a set of criteria that they may have not used for films released after 1950. This criterion may place a heavy emphasis on what filmmakers were able to do with technology and norms relative to that time. Because of this dichotomy between the seperate eras, I decided to focus exclusively on the era after the 1950s and discovered that there is a positive relationship between a film's reception and budget. 
+To understand this relationship, I decided to focus exclusively on films released after 1950, and excluded films released before 1950 in my analysis. This is largely due to the fact that many films released before the 1950s varied drastically compared to films released in the latter half of the century. Because film wasn’t developed in the form that we see it today, many audience’s may have focused on different areas of the film to review it. The criteria by which they reviewed film released before 1950 may have focused heavily on stylistic elements, rather than the narrative elements of the actual film like modern films. IMDB reviewers who reviewed films released earlier than 1950 may have also took into account some of the heavy technological limitations that plagued earlier films. Because of the dichotomy between the two separate eras, focusing exclusively on films released after 1950s ensured that the films are reviewed from a similar lens. 
 
-A larger budget means that the film production has more money to spend; this can results in better actors, special effects, marketing, etc. which can affect how an audience reacts to the film. Despite the fact that a film production may have more money to spend, it doesn't always result in an overall better film. Critics may interpret a good film differently than what an audience interprets as a good film. 
+The positive relationship between a film's reception and budget indicates that as a film's budget increases, the reception of the film increases as well. A larger budget means that the film production has more money to spend; this can result in better actors, special effects, marketing, etc. which positively impacts the overall reception of the film. Despite the fact that a film production may have more money to spend, it doesn’t always result in an overall better film. Critics may interpret a good film differently than what an audience interprets as a good film. This means that the relationship we found between budget and IMDB rating may not mean that the film was better, but instead, that you are more likely to enjoy it. Overall, a film with a higher budget may result in an overall enjoyable due to better special effects, actors, etc. making the film more enjoyable among audiences. 
 
-There are also some issues that arise from simply quantifying budget in US dollars. Inflation plays a large part in why films in the 1990s to 2000s have larger budgets. If earlier films like those from the 1950s were adjust for US inflation, then our results may have different and we may have discovered that there actually is no relation.  
+There are also some issues that arise from simply quantifying budget in US dollars. Inflation plays a large part in why films in the 1990s to 2000s have larger budgets compared to earlier films released in the 1950s. If earlier films like those released in the 1950s were adjust for US inflation, then our results may be different, and we may have discovered that there actually is no relationship. In earlier films, it is not standard to have such a large budget as their purpose is to mainly tell a story; modern films tend to capture the audience’s attention through their large budgets that focus on additional aspects other than narrative. To capture attention of the larger crowd, modern films may gather a large budget so that they are visually satisfying. In summary, although we have found a relation between budget and reception, there is also many confounding variables that explain the relationship and explain why budget doesn’t directly explain the reception audiences will have towards the film. 
 
-The positive relationshop between a film's reception and length indicates that as a film's length increases, then the reception of the film increases as well. Films released before 1950 were often characterized by their short lengths (especially during film eras before the 1920s). Due to their short lengths and the fact that cinema wasn't used in it's typical way at that time, I decided to focus excluvely on films released after the 1950s. 
+The positive relationship between a film's reception and length found in this analysis means that as a film's length increases, then the rating of the film increases as well. Films released before 1950 were often characterized by their short lengths (especially during film eras before the 1920s). Due to their short lengths and the fact that cinema wasn't similar to modern cinema in many aspects, I decided to focus exclusively on films released after the 1950s to find this relationship. 
 
-Film studios often have a final say before releasing a film. If a film is long, that may advise cutting the film so that it appeals to the masses. For a film to have a long runtime, it would need to be justified; the film would have to be good enough to be worth the audience's time. This may be a reason why a longer run time leads to a better reception. Good filmmakers often want their film to be a result of their uncompromised — without cuts— vision leading to more films that are longer with a better reception.  
+Film studios often have a final say before releasing a film. If a film is long, then they may advise cutting the film so that it appeals to a larger audience. For a film to have a long runtime, it would need to be earn its runtime; it would need to justify its long length; the film would have to be good enough to be worth the audience's time. This may be a reason why a longer run time leads to a better rating from IMDB reviewers. Good filmmakers often want their film to be a result of their uncompromised — without cuts— vision leading to more films that are longer with a better rating.  A potential reason for why longer films have better ratings on IMDB is because they attract a different audience. Longer films are more likely to be watched by audience’s that are fans of cinema; combined with the fact that longer films also tend to have more care by the film’s director, longer films have better rating from IMDB users. 
 
-The negative relationship between a film's reception and year indicates that older films are likely to have better reception than newer films.  This relationship could be a result of a multitude of factors. As we approach the 2000s, creating a film did not have many barriers as it did many years ago. During the 1950s, to create a film was a lot more expensive due to expensive, heavy, equipment, whereas in the 2000s, film could be be made on a lightweight, cheap video camera.Because of the plight many filmmarkers faced during the 1950s, it may have resulted in a more well-thought out —and therefore, better— films. 
+The negative relationship between a film's reception and year indicates that older films are likely to have better ratings by IMDB users than newer films.  This relationship could be a result of a multitude of factors. As we approach the 2000s, creating a film did not have many barriers as it did compared to the 1950s. During the 1950s, creating a film was a lot more expensive due to expensive and heavy, equipment, whereas in the 2000s, films could simply be made on a lightweight, cheap video camera. Because of the plight many filmmakers faced during the 1950s, it may have resulted in a more well-thought out —and therefore, better— films. 
 
-The data was collected from IMDB meaning that a lot of earlier films were rated retroactively. This may result in an inflated score for some of the older films. Many people adopt an 'older is better' mentality when watching older films, which causes them to rate older films with a higher score compared to newer films. 
+The data was collected from IMDB meaning that a lot of earlier films were rated retroactively. This may have also result in an inflated score for some of the older films, which explains why older films have better ratings by IMDB users. Many people also adopt an 'older is better' mentality when watching older films, which causes them to rate older films with a higher score compared to newer films. 
 
-The results from the analysis can assist people in many ways. When deciding on a good film to watch, the positive relation reception has with budget and length can help identify whether a film may be a good or a bad film; the negative relation between reception and year of release can also aid in helping determine the film's reception. Additionally, when creating a film, some of these relationships can aid in forecasting it's reception. A longer film, with a large budget may result in a film that is well received. 
+The results from the analysis can assist people in many ways. When deciding on a good film to watch, the positive relation reception has with budget and length can help identify whether a film may be a good or a bad film; the negative relation between reception and year of release can also aid in helping determine the film's reception. Additionally, when creating a film, some of these relationships can aid in forecasting its reception; this information can help film studios develop a sense of the anticipation for the film. 
 
-Advantage
+Although we found these interesting relationships, many caveats apply in this situation. In this analysis, we are using an IMDB average rating as a metric to define reception. A film’s reception can mean many different things to many different people. We are unaware of what the IMDB demographic is, which makes it hard to generalize these results to film reception in general. For example, the data is most likely missing a large part of the older demographic due to their inability to use websites like IMDB. It is also only taking into account those that have an account and can actually review it. We are also unsure of what review consist of as a simple score out of 10 differs drastically compared to a paragraph of why someone may or may not like the movies (like other websites do). 
 
-Disadvantage
-IMDB is a newer site so we are not seeing reviews from people now. 
+There are many weaknesses in the analysis and most of them stem from the data we use. As mentioned previously, due to the fact that IMDB is an online website, the data may be missing people from many demographics due to their inability to access technology or use the website. IMDB makes it difficult to determine where the reviews come from; the data would be much more meaningful if it was filtered to include well thought out reviews rather than simple scores out of 10.  There is also an absence of films from different areas of the world making it hard to generalize the results to the entire world’s film industry. The results could be a lot more interesting if the data also contained information about other large film industries other than Hollywood to determine whether factors such as budget, length, and year of release truly affect a film’s reception. 
 
-The results of our analysis do contain weaknesses, many of them stem from the data being used.
-
-There are many additional steps that can be taken for a better analysis. For one, we could have a dataset that contains information on more films from around the world. Have budget be adjustted for inflaiton. 
+There are many additional steps that can be taken for a better analysis. For one, we could have a dataset that contains information on more films from around the world ensuring that our results could be more generalizable. The data could also be filtered so that it contains well thought out reviews so that each and every rating is deeply thoughtful and meaningful, meaning that the variable ‘rating’ is truly accurate and represents audience’s view of the film. 
 
 ## Appendix/References
 
+### Github Link 
+
+Code and data supporting this analysis is available at: https://github.com/arjundhatt/PS5-
+
 ### Code 
 
-Below you will also find the R code used in this analysis: 
+Below you will find the R code used in this analysis: 
 
 #### Preamble; Setting up libraries and filtering the dataset 
 ```{r include = TRUE, echo=TRUE}
